--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
   firebase_storage: ^5.2.0
+  flutter_spinkit: ^4.1.2+1
   fluttertoast: ^7.1.5
   image_picker: ^0.6.7+15
 
