--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   fluttertoast: ^7.1.5
   image_picker: ^0.6.7+15
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
